@@ -16,7 +16,7 @@ Description: The 'Rcpp' package provides R functions as well as C++ classes whic
  <doi:10.1080/00031305.2017.1375990>); see 'citation("Rcpp")' for details.
 Depends: R (>= 3.0.0)
 Imports: methods, utils
-Suggests: RUnit, tinytest, inline, rbenchmark, knitr, rmarkdown, pinp, pkgKitten (>= 0.1.2)
+Suggests: tinytest, inline, rbenchmark, knitr, rmarkdown, pinp, pkgKitten (>= 0.1.2)
 VignetteBuilder: knitr
 URL: http://www.rcpp.org, http://dirk.eddelbuettel.com/code/rcpp.html, https://github.com/RcppCore/Rcpp
 License: GPL (>= 2)
